crates/check_cli/tests/snapshots/main_commands_ci/ci_does_not_organize_imports_via_cli.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.js`

```js
import { lorem, foom, bar } from "foo";
import * as something from "../something";

```

# Emitted Messages

```block
file.js:1:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
  > 1 │ import { lorem, foom, bar } from "foo";
      │        ^^^^^^^^^^^^^^^^^^^^
    2 │ import * as something from "../something";
    3 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 │ import·{·lorem,·foom,·bar·}·from·"foo";
      │ ---------------------------------------

```

```block
file.js:2:13 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ import { lorem, foom, bar } from "foo";
  > 2 │ import * as something from "../something";
      │             ^^^^^^^^^
    3 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1 1 │   import { lorem, foom, bar } from "foo";
    2   │ - import·*·as·something·from·"../something";
    3 2 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 warnings.
```
