crates/check_cli/tests/snapshots/main_commands_ci/ci_does_not_run_formatter_check_jsonc.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.jsonc`

```json
{
  // I am a comment
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
