crates/check_cli/tests/snapshots/main_commands_ci/ci_does_not_run_formatter_via_cli.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
