crates/check_cli/tests/snapshots/main_commands_ci/ci_does_not_run_linter.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "enabled": false
  }
}
```

## `file.js`

```js

function f() {
return { something }
}

```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - 
    2 1 │   function f() {
    3   │ - return·{·something·}
      2 │ + → return·{·something·};
    4 3 │   }
    5 4 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
