crates/check_cli/tests/snapshots/main_commands_ci/ci_errors_for_all_disabled_checks.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
## `check.json`

```json
{
  "formatter": {
    "enabled": true
  },
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  }
}
```

## `file.js`

```js
statement(    ) ; let a = !b || !c;
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The combination of configuration and arguments is invalid: 
    Formatter, linter and assist are disabled, can't perform the command. At least one feature needs to be enabled. This is probably and error.
  


```
