crates/check_cli/tests/snapshots/main_commands_ci/ci_ok.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
statement();

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
