crates/check_cli/tests/snapshots/main_commands_ci/ci_parse_error.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
if

```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
ci.js:2:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `(` but instead the file ends
  
    1 │ if
  > 2 │ 
      │ 
  
  i the file ends here
  
    1 │ if
  > 2 │ 
      │ 
  

```

```block
ci.js:2:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `(` but instead the file ends
  
    1 │ if
  > 2 │ 
      │ 
  
  i the file ends here
  
    1 │ if
  > 2 │ 
      │ 
  

```

```block
ci.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 3 errors.
```
